cmake_minimum_required(VERSION 3.0.0)
project(ProgPrincPract-Cpp VERSION 0.1.0 LANGUAGES C CXX)

include(CTest)
enable_testing()

add_executable(02-06_Names-CaseSensitive 02-Objects-Types-Values/02-06_Names-CaseSensitive.cpp)
add_executable(03-drill-01 03-Computation/03-drill-01.cpp)
add_executable(03-drill-02 03-Computation/03-drill-02.cpp)
add_executable(03-drill-03 03-Computation/03-drill-03.cpp)
add_executable(03-drill-04 03-Computation/03-drill-04.cpp)
add_executable(03-drill-05 03-Computation/03-drill-05.cpp)
add_executable(03-drill-06 03-Computation/03-drill-06.cpp)
add_executable(03-drill-07 03-Computation/03-drill-07.cpp)
add_executable(03-drill-08 03-Computation/03-drill-08.cpp)
add_executable(03-drill-09 03-Computation/03-drill-09.cpp)
add_executable(03-drill-10 03-Computation/03-drill-10.cpp)
add_executable(03-drill-11 03-Computation/03-drill-11.cpp)
add_executable(03-excercise-02 03-Computation/03-excercise-02.cpp)
add_executable(03-excercise-03 03-Computation/03-excercise-03.cpp)
add_executable(03-excercise-04 03-Computation/03-excercise-04.cpp)
add_executable(03-excercise-05 03-Computation/03-excercise-05.cpp)
add_executable(03-excercise-06 03-Computation/03-excercise-06.cpp)
add_executable(03-excercise-07 03-Computation/03-excercise-07.cpp)
add_executable(03-excercise-08 03-Computation/03-excercise-08.cpp)
add_executable(03-excercise-09 03-Computation/03-excercise-09.cpp)


set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
#set(CMAKE_BUILD_TYPE debug)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++23")
#set(CMAKE_EXE_LINKER_FLAGS " -static")
#   static linking of libraries

include(CPack)
